updated 'pull files' page

--- a/files/git/git_pull.html
+++ b/files/git/git_pull.html
@@ -65,7 +65,16 @@
                 <img src="../../assets/images/git_images/pull_repository.png" id="local_out" alt="Example of local directory which is outdated from repository">
                 <br>
                 This means my directory is <strong>outdated</strong>
-            
+                <br>
+                By typing <strong>"git pull" </strong> in Terminal, it will push all files from the repository to my directory.
+                <br>
+                <img src="../../assets/images/git_images/pull_ex.png" id="pull_repo" alt="Example of 'pull' command in CLI">
+                <br>
+                Now, if we check the local directory, it will <strong> contain the same files as the repository</strong>.
+                <br>
+                <img src="../../assets/images/git_images/matching_dir.png" id="matching_dir" alt="Example of matching directory after pulling items from repository">
+                <br>
+                My local directory is now <strong>up to date</strong> with the repository.
             </p>
             <a href="./git_push.html" id="previous"> <- Pushing Files </a>
             <a href="./git_branches.html" id="next">Branches -></a>
