more styling to index page, added initial js file

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
         <h1>Front-End Index</h1>
     </header>
 
+    <!-- Header -->
     <div class="container">
         <section id="explain">
-            <h2>What is this?</h2>
+            <h2>Purpose</h2>
             <p>
                 A demonstration of learnt programming practices, focused on front-end development
                 <br>
-                Updated on a regular basis 
+                Currently WIP, updated on a regular basis 
                 <br>
-                To refer to at future reference
 
             </p>
 
@@ -29,19 +29,26 @@
         <section id="homepage">
             <h2>Topics</h2>
             <ul>
+                <!-- HTML -->
                 <li id="html"><h2>Learn <a href="./files/html.html"> HTML</h2></a>
                     The underlying structure of a webpage
                     <img src="./assets/images/code_examples/html_ex.png" alt="Example of HTML code">
                     <br>
                     (this is for this webpage!)
                 </li>
+                <!-- CSS -->
                 <li id="css"><h2>Learn <a href="./files/css.html"> CSS</h2></a>
                     The styling and formatting of a webpage
+                    <br>
                     <img src="./assets/images/code_examples/css_ex.png" alt="Example of CSS code">
                 </li>
+                <!-- Javascript -->
                 <li id="js"><h2>Learn <a href="./files/javascript.html"> Javascript</h2></a>
                     The logic and business of a webpage
+                    <br>
+                    <img src="./assets/images/code_examples/js_ex.png" alt="Example of JS code">
                 </li>
+                <!-- Git -->
                 <li id="git"><h2>Learn <a href="./files/git/git_homepage.html"> Git</h2></a>
                     Version control using terminal
                     <br>
