updating code to be be w3c compliant

--- a/index.html
+++ b/index.html
@@ -30,26 +30,26 @@
             <h2>Topics</h2>
             <ul>
                 <!-- HTML -->
-                <li id="html"><h2>Learn <a href="./files/html.html"> HTML</h2></a>
+                <li id="html"><h2>Learn <a href="./files/html.html"> HTML</a></h2>
                     The underlying structure of a webpage
                     <a href="./files/html/html.html"><img src="./assets/images/code_examples/html_ex.png" alt="Example of HTML code"></a>
                     <br>
                     (this is for this webpage!)
                 </li>
                 <!-- CSS -->
-                <li id="css"><h2>Learn <a href="./files/css_page/css.html"> CSS</h2></a>
+                <li id="css"><h2>Learn <a href="./files/css_page/css.html"> CSS</a></h2>
                     The styling and formatting of a webpage
                     <br>
                     <a href="./files/css_page/css.html"><img src="./assets/images/code_examples/css_ex.png" alt="Example of CSS code"></a>
                 </li>
                 <!-- Javascript -->
-                <li id="js"><h2>Learn <a href="./files/javascript.html"> Javascript</h2></a>
+                <li id="js"><h2>Learn <a href="./files/javascript.html"> Javascript</a></h2>
                     The logic and business of a webpage
                     <br>
                     <a href="./files/js/javascript.html"><img src="./assets/images/code_examples/js_ex.png" alt="Example of JS code"></a>
                 </li>
                 <!-- Git -->
-                <li id="git"><h2>Learn <a href="./files/git/git_homepage.html"> Git</h2></a>
+                <li id="git"><h2>Learn <a href="./files/git/git_homepage.html"> Git</a></h2>
                     Version control using terminal
                     <br>
                     <a href="./files/git/git_homepage.html"><img src="./assets/images/code_examples/git_ex.png" alt="Example of Git version control"></a>
