updated readme file

--- a/files/git/git_branches.html
+++ b/files/git/git_branches.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git Staging Files - Front End Index</title>
+    <title>Git Branches - Front End Index</title>
     <link rel="stylesheet" href="./git_style.css">
     <link rel="icon" type="image/x-icon" href="../../assets/images/git_images/git_logo.png">
 </head>
@@ -42,26 +42,12 @@
         </section>
         
         <section id="clone">
-            <h2>Staging Files</h2>
+            <h2>Branches</h2>
             <p>
-                Staging files is the act of preparing files to be pushed back to the main repository, on Github.
-                <br>
-                <img src="../../assets/images/git_images/git_staging_diagram.png" id="stage_diagram" alt="Diagram to demonstrate staging process in Git">
-                <br>
-                This is a simple process and only takes one command.
-                <br>
-                In <strong>Terminal</strong>, open the correct folder
-                <br>
-                Type <strong> "git add -A" </strong>to prepare all files in the folder to be pushed
-                <img src="../../assets/images/git_images/staging_ex.png" id="stage_ex" alt="Example of working staging process in terminal">
-                <br>
-                If successful, the terminal will <strong>display a new line </strong>with no text
-                <br>
-                The files are now staged, ready to be committed.
-
+                
             </p>
-            <a href="./git_homepage.html" id="previous"> <- Cloning Repo </a>
-            <a href="./git_commit.html" id="next">Committing Files -></a>
+            <a href="./git_staging.html" id="previous"> <- Staging Files </a>
+            <a href="./git_push.html" id="next">Push Files -></a>
         </section>
     </div>
 
